Fix stats for alignment interface.

--- a/static/style.css
+++ b/static/style.css
@@ -121,8 +121,13 @@ dl {
 .table-cell {
 	display: table-cell;
 	padding: 8px;
+	width: 1%;
+}
 	/*text-align: center;*/
 }
+
+
+
 .header-cell-first {
 	width: 50%
 }
